# simple-rag

./: README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  default_config.yaml
src/document_processor/: document_processor.py
src/llm/: model.py
src/ui/: gradio_interface.py
src/utils/: file_utils.py
src/vector_db/: chroma_db.py
